[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "anonium"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
bs58 = { git = "https://github.com/KenanSulayman/bs58-rs.git", branch = "master" }
bson = "0.10.0"
lazy_static = "1.0.0"
mongodb = "0.3.7"
rand = "0.4.1"
redis = "0.8.0"
ring = "0.11.0"
rocket = "=0.3.4"
rocket_codegen = "=0.3.4"
rocket_contrib = "=0.3.4"
serde = "1.0.25"
serde_derive = "1.0.25"
time = "0.1.38"
