[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "impis"
version = "0.1.0"

[dependencies]
bart = "0.1.4"
bart_derive = "0.1.4"
bs58 = "0.2.0"
bson = "0.10.0"
lazy_static = "1.0.1"
mongodb = "0.3.7"
rand = "0.5.3"
redis = "0.8.0"
ring = "0.11.0"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
serde = "1.0.68"
serde_derive = "1.0.68"
time = "0.1.40"
